# maple

./: .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  CLAUDE.md  DESIGN.md  README.md  alchemy.run.ts  docker-compose.yml  knip.json  mise.toml  package.json  turbo.json
.codex/: config.toml
.github/workflows/: ci.yml  deploy-pr-preview.yml  deploy-prd.yml  deploy-stg.yml  eval.yml  ingest-load-tests.yml  ingest-rust-tests.yml  local-binary-release.yml  pullfrog.yml  tinybird-cd.yml  token-cost.yml
apps/agents/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  tsconfig.json  vite.config.ts
apps/alerting/: alchemy.run.ts  package.json  wrangler.jsonc
apps/alerting/src/: worker.ts
apps/api/: Dockerfile  alchemy.run.ts  autumn.config.ts  package.json  vitest.config.ts  wrangler.jsonc
apps/api/scripts/: bench-queries.ts
apps/api/src/: agent.ts  (+6 more)
apps/chat-agent/: alchemy.run.ts  package.json  wrangler.jsonc
apps/chat-flue/: .dev.vars.example  README.md  alchemy.run.ts  package.json  wrangler.jsonc
apps/cli/: package.json  tsconfig.json
apps/ingest/: .gitignore  Cargo.toml  package.json
apps/ingest/benches/: ingest_bench.rs
apps/ingest/src/: autumn.rs  chdb.rs  clickhouse_insert_mappings.rs  lib.rs  main.rs  metrics.rs  telemetry.rs
apps/ingest/ui-dist/: index.html
apps/landing/: .gitignore  package.json
apps/local-cli/: package.json  tsconfig.json
apps/local-ui/: alchemy.run.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/: global.css  package.json
apps/scraper/: Dockerfile  package.json  railway.json  tsconfig.json
apps/web/: Dockerfile  index.html  package.json  vite.config.ts
docs/: attributes.md  browser-sdk.md  database-query-observability.md  github-app-setup.md  github-integration.md  local-mode.md  openrouter-tracing.md  self-hosted-clickhouse.md  tinybird-pr-branches.md
examples/effect-todo/: README.md  package.json  tsconfig.json
lib/clickhouse-builder/: README.md  package.json
lib/effect-cf/: README.md  package.json  tsconfig.json
lib/effect-cloudflare/: package.json
otel/: collector-config.yaml  otel-collector.Dockerfile
scripts/: build-local-binary.sh  gen-ui-embed.ts  generate-clickhouse-insert-mappings.ts  generate-clickhouse-schema-sql.ts  install.sh  planetscale-pr-branch.ts  tinybird-pr-branch.ts
skills/maple-audit/: SKILL.md  checks.md
skills/maple-dashboard-widgets/: SKILL.md
(+879 files in other folders)
